--- a/app/components/page-hero/page-hero.twig
+++ b/app/components/page-hero/page-hero.twig
@@ -12,7 +12,7 @@
             </h1>
             <p class="page-hero__subtitle">Cовременные традиции современного жилья</p>
             <div class="page-hero__choice-btn">
-                <a href="#apartments" class="btn btn--second btn--anchor btn--large js-scrollScreen">
+                <a href="#gallery" class="btn btn--second btn--anchor btn--large js-scrollScreen">
                     <i class="btn--anchor-img"></i>
                     выбрать квартиру
                 </a>
